# starter-py-es-engine

./: .deploy.sh  .gitignore  Dockerfile  pyproject.toml
src/: main.py
src/configs/: __init__.py  env.py  log.py
src/connections/: elasticsearch.py
src/models/: base.py
